added bootstrap and customizations

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>SampleApp</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
+	<title>SampleApp</title>
+	<%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+	<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+	<%= csrf_meta_tags %>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
+<%= render 'layouts/header' %>
+<!-- Bootstrap container -->
+<div class = "container">
+	<%= yield %>
 
-<%= link_to "Home", root_path %>
-<%= link_to "About Us", about_path %>
-
-<%= yield %>
+</div>
 
 </body>
 </html>
