--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,10 @@
 
-<h1>Pages#home</h1>
-<p>Sign up <%= link_to "here", about_path%></p>
-<ol>
-	<li>Hey</li>
-	<li>what's up</li>
+<div class="jumbotron">
+  <h1>WELCOME</h1>
+  <p>Click here to <%= link_to "Sign up", "#", class: "btn btn-primary btn-lg"%></p>
+  <ol>
+  	<li>Hey</li>
+  	<li>what's up</li>
 
-</ol>
+  </ol>
+</div>
