--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,19 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>SampleApp</title>
+	<title>RecallThat</title>
 	<%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
 	<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
 	<%= csrf_meta_tags %>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
-<body>
-<%= render 'layouts/header' %>
+<body id="page-top" data-spy="scroll">
+
+<%= render 'layouts/navbar' %>
 <!-- Bootstrap container -->
-<div class = "container">
-	<%= yield %>
 
-</div>
 
+<%= yield %>
+
+
+
+<footer>
+    <div class="container text-center">
+        <p>Copyright &copy; Joshua Archer 2015</p>
+    </div>
+</footer>
 </body>
 </html>
