--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,10 +1,8 @@
 
-<div class="jumbotron">
-  <h1>WELCOME</h1>
-  <p>Click here to <%= link_to "Sign up", "#", class: "btn btn-primary btn-lg"%></p>
-  <ol>
-  	<li>Hey</li>
-  	<li>what's up</li>
+<header class="intro">
+    <div class="intro-body">
 
-  </ol>
-</div>
+      THIS IS THE HOME.HTML
+
+    </div>
+</header>
