--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -2,8 +2,10 @@
 <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
         <div class="container">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
-                      <img src="../../assets/images/BY-hamburger.png" style="width: 25px; height: 25px;">
+                <button type="button" class="navbar-toggle burger" data-toggle="collapse" data-target=".navbar-main-collapse">
+                  <a class="burger-button"><%= image_tag("BY-hamburger.png", size: "25x25") %></a>
+
+                      <!-- <img src="../../assets/images/BY-hamburger.jpg" style="width: 25px; height: 25px;"> -->
                     <!-- <i class="glyphicon glyphicon-menu-hamburger"></i> -->
                 </button>
             </div>
