--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,3 +6,50 @@
 
     </div>
 </header>
+
+<!-- About Section -->
+<section id="about" class="content-section text-center">
+    <div class="row">
+        <div class='col-lg-8 col-lg-offset-2'>
+            <h2>About Recall</h2>
+            <p>Recall is a space to REconnect with friends</p>
+        </div>
+    </div>
+</section>
+
+<!-- Download Section -->
+<section id="download" class="content-section text-center">
+    <div class="download-section">
+        <div class="container">
+            <div class="col-lg-8 col-lg-offset-2">
+                <h2>Download Recall</h2>
+                <p>You can download Recall for free from the Apple app store!</p>
+                <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- Contact Section -->
+<section id="contact" class="content-section text-center">
+    <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
+                <h2>Contact Us</h2>
+                <p>Feel free to email us with any questions comments or concers!</p>
+                <p><a href="mailto:feedback@startbootstrap.com">feedback@recallthat.com</a>
+                </p>
+                <ul class="list-inline banner-social-buttons">
+                    <li>
+                        <a href="" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                    </li>
+                    <li>
+                        <a href="" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+                    </li>
+                    <li>
+                        <a href="" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Google+</span></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+</section>
+
