--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,10 @@
 
 <header class="intro">
+   <!--  <%= image_tag("landing-page.jpg", class:"landing_page") %> -->
+
     <div class="intro-body">
 
-      THIS IS THE HOME.HTML
+      <h1 class="rTitle">Recall</h1>
 
     </div>
 </header>
